# routes/api.php
@@ -1,5 +1,8 @@
 <?php
 
+use App\Http\Controllers\AuthController;
+use App\Http\Controllers\Api\GrupoController;
+use App\Http\Controllers\Api\Relatorios\ComissaoVendedorController;
 use App\Http\Controllers\API\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -25,10 +28,10 @@ Route::group([
 
 ], function ($router) {
 
-    Route::post('login', 'App\Http\Controllers\AuthController@login');
-    Route::post('logout', 'App\Http\Controllers\AuthController@logout');
-    Route::post('refresh', 'App\Http\Controllers\AuthController@refresh');
-    Route::get('me', 'App\Http\Controllers\AuthController@me');
+    Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/logout', [AuthController::class, 'logout']);
+    Route::post('/refresh', [AuthController::class, 'refresh']);
+    Route::get('/me', [AuthController::class, 'me']);
 
     
 
@@ -36,6 +39,9 @@ Route::group([
 
 Route::middleware('api')->group(function() {
     Route::resource('usuarios', UserController::class);
+    Route::resource('grupos', GrupoController::class);
+
+    Route::post('/relComissaoVendedor', [ComissaoVendedorController::class, 'relatorioComissaoVendedor']);
 });
 
 /* Route::post('/login', function(Request $request){
